--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="logo-name">
             <div class="logo-image">
-                <img src="images/logo.png" alt="">
+                <img src="logo.png" alt="">
             </div>
 
             <span class="logo_name">DLC BSIT eLms</span>
@@ -81,7 +81,7 @@
                 <input type="text" placeholder="Search here...">
             </div>
             
-            <img src="images/profile.png" alt="">
+            <img src="profile.png" alt="">
         </div>
 
         <div class="dash-content">
