--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
 
                 <div class="boxes">
                     <div class="box box1">
-                        <i class="uil uil-user"></i>
+                        <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1A</span>
                         <span class="number">00,00</span>
                     </div>
                     <div class="box box2">
-                        <i class="uil uil-user"></i>
+                        <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1B</span>
                         <span class="number">00,00</span>
                     </div>
                     <div class="box box3">
-                        <i class="uil uil-user"></i>
+                        <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1C</span>
                         <span class="number">00,00</span>
                     </div>
