--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="activity-data">
                     <div class="data names">
                         <span class="data-title">Name</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Joemar O. Batac</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="data email">
                         <span class="data-title">Email</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">2022306468@dlc.edu.ph</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -137,9 +137,9 @@
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
-                    <div class="data joined">
-                        <span class="data-title">Joined</span>
-                        <span class="data-list"></span>
+                    <div class="data section">
+                        <span class="data-title">Section</span>
+                        <span class="data-list">BSIT 1B</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -149,7 +149,7 @@
                     </div>
                     <div class="data type">
                         <span class="data-title">Type</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Student</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="data status">
                         <span class="data-title">Status</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Offline</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
