--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </div>
                     <div class="data email">
                         <span class="data-title">Email</span>
-                        <span class="data-list">2022306468@dlc.edu.ph</span>
+                        <span class="data-list">202230646878@dlc.edu.ph</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="data status">
                         <span class="data-title">Status</span>
-                        <span class="data-list">Offline</span>
+                        <span class="data-list">N/A</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
