--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
             <div class="activity">
                 <div class="title">
                     <i class="uil uil-clock-three"></i>
-                    <span class="text">Recent Activity</span>
+                    <span class="text">Recent Join</span>
                 </div>
 
                 <div class="activity-data">
                     <div class="data names">
                         <span class="data-title">Name</span>
-                        <span class="data-list">Joemar O. Batac</span>
+                        <span class="data-list">Joemar O Batac</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
