--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="box box1">
                         <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1A</span>
-                        <span class="number">00,00</span>
+                        <span class="number">00,01</span>
                     </div>
                     <div class="box box2">
                         <i class="uil uil-user-alt"></i>
@@ -120,7 +120,7 @@
                     <div class="data names">
                         <span class="data-title">Name</span>
                         <span class="data-list">Joemar O Batac</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">John Mark Salalila</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -130,7 +130,7 @@
                     <div class="data email">
                         <span class="data-title">Email</span>
                         <span class="data-list">202230646878@dlc.edu.ph</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">202231758989@dlc.edu.ph</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -140,7 +140,7 @@
                     <div class="data section">
                         <span class="data-title">Section</span>
                         <span class="data-list">BSIT 1B</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">BSIT 1A</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -150,7 +150,7 @@
                     <div class="data type">
                         <span class="data-title">Type</span>
                         <span class="data-list">Student</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Shannela</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -159,8 +159,8 @@
                     </div>
                     <div class="data status">
                         <span class="data-title">Status</span>
-                        <span class="data-list">N/A</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Endrolled</span>
+                        <span class="data-list">Validating</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
