--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </a></li>
                 <li><a href="#">
                     <i class="uil uil-shield"></i>
-                    <span class="link-name">Secrurity</span>
+                    <span class="link-name">Security</span>
                 </a></li>
                 <li><a href="#">
                     <i class="uil uil-database"></i>
