--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="data type">
                         <span class="data-title">Type</span>
-                        <span class="data-list">Student</span>
+                        <span class="data-list">Trixie</span>
                         <span class="data-list">Shannela</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -160,7 +160,7 @@
                     <div class="data status">
                         <span class="data-title">Status</span>
                         <span class="data-list">Endrolled</span>
-                        <span class="data-list">Validating</span>
+                        <span class="data-list">Endrolled</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
