--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="box box2">
                         <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1B</span>
-                        <span class="number">00,01</span>
+                        <span class="number">00,02</span>
                     </div>
                     <div class="box box3">
                         <i class="uil uil-user-alt"></i>
@@ -121,7 +121,7 @@
                         <span class="data-title">Name</span>
                         <span class="data-list">Joemar O Batac</span>
                         <span class="data-list">John Mark Salalila</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Heaven Magalso</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -131,7 +131,7 @@
                         <span class="data-title">Email</span>
                         <span class="data-list">202230646878@dlc.edu.ph</span>
                         <span class="data-list">202231758989@dlc.edu.ph</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">202232566896@dlc.edu.ph</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -141,7 +141,7 @@
                         <span class="data-title">Section</span>
                         <span class="data-list">BSIT 1B</span>
                         <span class="data-list">BSIT 1A</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">BSIT 1B</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -151,7 +151,7 @@
                         <span class="data-title">Type</span>
                         <span class="data-list">Trixie</span>
                         <span class="data-list">Shannela</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Trixie</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -161,7 +161,7 @@
                         <span class="data-title">Status</span>
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Validating</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
