--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>                           <p>Powered By ΛPΞXΞ 𝒯𝑒𝒸𝒽𝓃𝑜𝓁𝑜𝑔𝓎 .ʟᴛᴅ </p>
     </section>
 
     <script src="script.js"></script>
