--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="box box3">
                         <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1C</span>
-                        <span class="number">00,00</span>
+                        <span class="number">00,01</span>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                         <span class="data-list">Joemar O Batac</span>
                         <span class="data-list">John Mark Salalila</span>
                         <span class="data-list">Heaven Magalso</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Raj Salalila</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -132,7 +132,7 @@
                         <span class="data-list">202230646878@dlc.edu.ph</span>
                         <span class="data-list">202231758989@dlc.edu.ph</span>
                         <span class="data-list">202232566896@dlc.edu.ph</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">202234569796@dlc.edu.ph</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -142,7 +142,7 @@
                         <span class="data-list">BSIT 1B</span>
                         <span class="data-list">BSIT 1A</span>
                         <span class="data-list">BSIT 1B</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">BSIT 1C</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -152,7 +152,7 @@
                         <span class="data-list">Trixie</span>
                         <span class="data-list">Shannela</span>
                         <span class="data-list">Trixie</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">John Mark</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -162,7 +162,7 @@
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Validating</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Validating</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
