--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                     </div>
                     <div class="data type">
                         <span class="data-title">Type</span>
-                        <span class="data-list">Trixie</span>
-                        <span class="data-list">Shannela</span>
-                        <span class="data-list">Trixie</span>
-                        <span class="data-list">John Mark</span>
+                        <span class="data-list">Student</span>
+                        <span class="data-list">Student</span>
+                        <span class="data-list">Student</span>
+                        <span class="data-list">Student</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
@@ -161,8 +161,8 @@
                         <span class="data-title">Status</span>
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
-                        <span class="data-list">Validating</span>
-                        <span class="data-list">Validating</span>
+                        <span class="data-list">Endrolled</span>
+                        <span class="data-list">Endlolled</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
