--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
-                        <span class="data-list">Endlolled</span>
+                        <span class="data-list">Endrolled</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
