--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="box box3">
                         <i class="uil uil-user-alt"></i>
                         <span class="text">BSIT 1C</span>
-                        <span class="number">00,01</span>
+                        <span class="number">00,02</span>
                     </div>
                 </div>
             </div>
@@ -122,8 +122,8 @@
                         <span class="data-list">Joemar O Batac</span>
                         <span class="data-list">John Mark Salalila</span>
                         <span class="data-list">Heaven Magalso</span>
-                        <span class="data-list">Raj Salalila</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Raj </span>
+                        <span class="data-list">Xyre James Aliling</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
@@ -133,7 +133,7 @@
                         <span class="data-list">202231758989@dlc.edu.ph</span>
                         <span class="data-list">202232566896@dlc.edu.ph</span>
                         <span class="data-list">202234569796@dlc.edu.ph</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">202233496678@dlc.edu.ph</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
@@ -143,7 +143,7 @@
                         <span class="data-list">BSIT 1A</span>
                         <span class="data-list">BSIT 1B</span>
                         <span class="data-list">BSIT 1C</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">BSIT 1C</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
@@ -153,7 +153,7 @@
                         <span class="data-list">Student</span>
                         <span class="data-list">Student</span>
                         <span class="data-list">Student</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Student</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
@@ -163,7 +163,7 @@
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
                         <span class="data-list">Endrolled</span>
-                        <span class="data-list"></span>
+                        <span class="data-list">Endrolled</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
