--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                     </div>
                     <div class="data status">
                         <span class="data-title">Status</span>
-                        <span class="data-list">Endrolled</span>
-                        <span class="data-list">Endrolled</span>
-                        <span class="data-list">Endrolled</span>
-                        <span class="data-list">Endrolled</span>
-                        <span class="data-list">Endrolled</span>
+                        <span class="data-list">Enrolled</span>
+                        <span class="data-list">Enrolled</span>
+                        <span class="data-list">Enrolled</span>
+                        <span class="data-list">Enrolled</span>
+                        <span class="data-list">Enrolled</span>
                         <span class="data-list"></span>
                         <span class="data-list"></span>
                     </div>
