--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--=== Coding by CodingLab | www.codinglabweb.com === -->
+<!--=== Coding by apexe technology | www.apexe-tech.com === -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
