--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="activity-data">
                     <div class="data names">
                         <span class="data-title">Name</span>
-                        <span class="data-list">Joemar O Batac</span>
+                        <span class="data-list">Joemar Batac</span>
                         <span class="data-list">John Mark Salalila</span>
                         <span class="data-list">Heaven Magalso</span>
                         <span class="data-list">Raj </span>
